--- a/CyclingMaster/app/build.gradle
+++ b/CyclingMaster/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:design:23.0.1'
     compile 'com.google.android.gms:play-services:8.1.0'
     compile 'com.mcxiaoke.volley:library:1.0.18'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
 }
