--- a/CyclingMaster/app/src/main/AndroidManifest.xml
+++ b/CyclingMaster/app/src/main/AndroidManifest.xml
@@ -51,20 +51,12 @@
             android:label="@string/title_activity_login" >
         </activity>
         <activity
-            android:name=".HomeActivity"
-            android:label="@string/title_activity_home" >
-        </activity>
-        <activity
-            android:name=".ProfileActivity"
-            android:label="@string/title_activity_profile" >
-        </activity>
-        <activity
             android:name=".RegisterActivity"
             android:label="@string/title_activity_register" >
         </activity>
         <activity
             android:name=".MainActivity"
-            android:label="@string/title_activity_home" >
+            android:label="Home" >
         </activity>
         <activity
             android:name=".Record"
